# Sistema-ROS-para-projeto-SAeD

giroscope/: CMakeLists.txt  package.xml
giroscope/src/GyroscopeSensor/: platformio.ini
giroscope/src/GyroscopeSensor/src/: main.cpp
modulo_LiDAR/: CMakeLists.txt
modulo_Radar/: BatalhaNava.cpp  CMakeLists.txt  package.xml
modulo_Radar/src/: ModuloGiroscopico.cpp
